# ogadpy

./: LICENCE.md  README.md  pyproject.toml
src/ogadpy/: __init__.py  profiler.py
src/ogadpy/contrails/: fields.py
src/ogadpy/geometry/: lines.py
src/ogadpy/plotting/: __init__.py  comparative_heatmap.py  dataset.py  dataset_plot.py  fractional_markers.py  outlines.py
src/ogadpy/spectrum/: __init__.py  planck.py  spectralmap.py
